 _ _ _

13/12/2023 
Matthieu Ravet 

Comments:
    - First official release notes : Implementation of MOSAIC (Multimodal framework + likelihood functions).
    See /ForMoSA/DEMO/inputs/MOSAIC/ folder for more info

_ _ _ 

20/12/2023 
Matthieu Ravet 

Comments:
    - Correction of the os import in adapt/extraction_functions.py

_ _ _ 